[package]
name = "my_actions"
version = "0.1.0"
authors = ["Alex Schuler <schulace@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde={version ="^1", features =["derive"]}
serde_json="^1"
chrono = {version = "^0.4", features = ["serde"] }
tokio = {version = "0.2", features = ["full"] }
reqwest = {version = "0.10.6", features = ["json"]}
anyhow = "1.0.31"
